Atualiza README para refletir uso de SQLite
O README foi reescrito para destacar a utilização de SQLite como base de dados padrão, simplificar instruções de configuração e execução, e detalhar a estrutura de pastas e funcionalidades principais. Removidas referências a PostgreSQL e adicionadas informações sobre logging, permissões e limitações atuais.