@@ -1,231 +1,72 @@
- # 📘LTC Events   — Desktop Manager (Java 25 + JavaFX 25)
+﻿# LTC Events (Java 25 + JavaFX 25)
 
-LTC Events é uma aplicação desktop desenvolvida em Java 25 com JavaFX 25, utilizando Maven e acesso a base de dados PostgreSQL através de variáveis de ambiente com dotenv.
+## Visao Geral
+- Aplicacao desktop para gestao de eventos, participantes, sessoes e recursos, com UI JavaFX.
+- Autenticacao segura com BCrypt, migracao transparente de passwords antigas e gestao de sessao em memoria.
+- Painel administrativo para gerir participantes, eventos, sessoes e recursos; calendario mensal com detalhes por evento.
+- Base de dados SQLite local (`eventos.db`) pronta a usar; logging de acoes em `logs_app.txt`.
 
-O objetivo da aplicação é gerir eventos, participantes, sessões, recursos e permitir um painel exclusivo para administradores.
+## Tecnologias
+- Java 25, JavaFX 25
+- Maven 3.8+
+- SQLite (sqlite-jdbc)
+- BCrypt (org.mindrot), dotenv-java
+- SLF4J simple (logging console) + logging aplicacional em ficheiro
 
-# 🚀Tecnologias Utilizadas 
-
-| Tecnologia | Versão | Description |
-|------------|--------| ----------- |
-| Java       | 25     |    Linguagem principal         |
-| JavaFX     | 25     |      Interface gráfica (UI)       |
- | Maven      |   3.8+    | Gestão de dependências
-| PostgreSQL      |     14+      | Base de dados
-| Dotenv (Java)      |   5.2      | Gestão segura de credenciais
-| BCrypt (Mindrot)    |     Atual      | Hash seguro de passwords
-
-# 📁 Estrutura Geral do Projeto
+## Estrutura de Pastas (principal)
 ```
-src/
-└── main/java/ltc/events/
-├── classes/
-│     ├── Event.java
-│     ├── Participant.java
-│     ├── Types.java
-│     ├── State.java
-│     └── Session.java
-│
-├── classes/hashs/
-│     ├── AuthService.java
-│     ├── PasswordUtil.java
-│     └── SessionEntry.java
-│
-├── Modules/
-│     ├── db.java
-│     ├── Permissions.java
-│     ├── Window.java
-│     └── visual/
-│           ├── Login.java
-│           └── Register.java
-│
-├── Modules/con/
-│     ├── EventDB.java
-│     ├── ParticipantDB.java
-│     ├── TypesDB.java
-│     └── SessionDB.java
-│
-└── Main.java
-```
-# 🔌 Conexão à Base de Dados (dotenv)
-O projeto usa um ficheiro .env para guardar as credenciais de forma segura:
-```
-URL=jdbc:postgresql://HOST:5432/NOME_BD
-DB_USER=postgres
-DB_PASSWORD=****
+src/main/java/ltc/events/
+  Main.java
+  Modules/
+    db.java                # liga SQLite
+    Window.java            # janela principal e navegacao
+    account/               # screens de conta
+    admin/                 # screens administrativas
+    connection/            # DAOs (EventDB, ParticipantDB, SessionDB, ResourcesDB, ...)
+    ui/                    # settings, alteracao de password
+    util/                  # LoggingUtil, NifUtil
+    visual/                # Login, Register, CalendarEventoView, CustomAlert, StyleUtil
+  classes/                 # modelos: Event, Participant, Session, Resources, State, Types, etc.
+
+database/                  # scripts SQL de apoio (PostgreSQL/SQLite)
+eventos.db                 # base SQLite de exemplo
+relatorio_admin.txt        # contagens rapidas (participantes/eventos/recursos/sessoes)
+logs_app.txt               # registo de acoes
+TemplateTrabalhos.docx     # template de relatorio
 ```
 
-# 🔧 Classe db.java
-Conecta automaticamente ao PostgreSQL:
-``` java
-Dotenv env = Dotenv.load();
-String url = env.get("URL");
-String user = env.get("DB_USER");
-String pass = env.get("DB_PASSWORD");
-conn = DriverManager.getConnection(url, user, pass);
+## Funcionalidades
+- Modo admin direto: a aplicaçao arranca autenticada como administrador (sem ecrãs de login/registo) com acesso imediato ao painel.
+- Login/Logout com BCrypt e migracao automatica de passwords antigas em texto simples.
+- Registo de utilizadores, validacao de email unico e validacao de NIF (`NifUtil`).
+- Listagem e edicao de participantes (admin), incluindo tipo/permissoes.
+- Gestao de eventos: criar/listar/editar com estado, imagem e datas; associacao a sessoes e recursos.
+- Calendario mensal (`CalendarEventoView`) e lista de eventos com filtros (ativos/antigos, ano/estado).
+- Gestao de sessoes e participacoes (`SessionDB`, `SessionParticipantDB`).
+- Logging aplicacional (`LoggingUtil` -> `logs_app.txt`) e ficheiro de contagem `relatorio_admin.txt`.
+
+## Pre-requisitos
+- Java 25 instalado e `JAVA_HOME` configurado.
+- Maven 3.8+ no PATH.
+- Ambiente Windows/Linux/Mac com permissao de criar ficheiros (para logs e DB).
+
+## Configuracao Rapida
+1) Garantir Java/Maven instalados.
+2) Base de dados: por defeito usa SQLite local. O ficheiro `eventos.db` ja vem preparado. Se quiser recriar:
+   - Usar `sqlite.sql` (SQLite) ou `Database.sql` (estrutura equivalente).
+3) Variaveis de ambiente: `.env` contem `URL=jdbc:sqlite:eventos.db`. Ajuste se mover a BD.
+
+## Como Executar
 ```
-
-# 🔐 Autenticação + BCrypt + Sessões
-
-### ✔ Passwords são guardadas com BCrypt
- - Hash automático no registo
- - Migração automática de passwords antigas em plaintext
-
-### ✔ Sistema de Login (AuthService)
-- Valida hash
-- Carrega participante + tipo (Types)
-- Retorna objeto Participant
-
-### ✔ Sistema de Sessão (SessionEntry)
+mvn clean javafx:run
 ```
-SessionEntry.login(user);
-SessionEntry.logout();
-SessionEntry.isLogged();
-SessionEntry.getUser();
-```
+- O plugin `javafx-maven-plugin` injeta os modulos JavaFX necessarios.
+- Se precisar de opcoes adicionais, veja `pom.xml` (ha flags `--enable-native-access`).
 
-# 🔑 Sistema de Permissões (Permissions)
+## Testes
+- Comando: `mvn test` (no momento nao ha suite de testes automatizados criada).
 
-Define acessos:
-- Admin
-- Moderador
-- Participante
-
-```java
-public static boolean isAdmin() {
-return SessionEntry.getUser().getType().getName().equalsIgnoreCase("admin");
-}
-```
-
-# 🖼 JavaFX UI — Janela Principal (Window)
-
-A UI principal inclui:
-
-- Navbar estilo macOS
-- Login / Register
-- Cards dos eventos com imagem
-- Tamanhos dinâmicos consoante data do evento
-- Refresh automático após login
-- Painel Admin para administradores
-
-# 🧱 Cards dos Eventos (Modo "Windows 8 Tiles")
-
-Cada Event aparece como:
-
-- Cartão dinâmico
-- Imagem
-- Nome
-- Data
-- Estado com cor (badge)
-- Tamanho adaptado consoante proximidade do evento
-
-# 🔧 Painel Admin
-
-Disponível só para:
-
-Admin
-
-Moderador
-
-Inclui:
-
-✔ Participantes
-
-— Tabela com todos os participantes
-— Duplo clique abre editor
-
-✔ Sessões
-
-— (A implementar)
-
-✔ Eventos
-
-— (A implementar)
-
-✔ Recursos
-
-— (A implementar)
-
-# 🧩 Registo de Participantes (Register)
-
-Campos incluídos:
-
-- Nome
-- Email
-- Telefone
-- Password
-- Tipo = 2 (participante) sempre
-- Hash automático de password
-- Verificação de email duplicado
-- Inserção no PostgreSQL
-
-# 🗄 Access Layer (DB)
-
-Cada tabela da BD tem uma classe DB:
-- EventDB
-
-Carrega todos os eventos.
-- ParticipantDB
-
-Registo, login e listagem de participantes.
-- SessionDB
-
-Listagem de sessões (a implementar).
-- TypesDB
-
-Carregar todos os tipos para dropdowns.
-
-
-
-
- # ⚙ Dependências Maven (importantes)
-``` xml 
-<dependencies>
-
-    <!-- JavaFX -->
-    <dependency>
-        <groupId>org.openjfx</groupId>
-        <artifactId>javafx-controls</artifactId>
-        <version>25.0.1</version>
-    </dependency>
-
-    <!-- Dotenv -->
-    <dependency>
-        <groupId>io.github.cdimascio</groupId>
-        <artifactId>java-dotenv</artifactId>
-        <version>5.2.2</version>
-    </dependency>
-
-    <!-- BCrypt -->
-    <dependency>
-        <groupId>org.mindrot</groupId>
-        <artifactId>jbcrypt</artifactId>
-        <version>0.4</version>
-    </dependency>
-
-    <!-- PostgreSQL -->
-    <dependency>
-        <groupId>org.postgresql</groupId>
-        <artifactId>postgresql</artifactId>
-        <version>42.7.2</version>
-    </dependency>
-
-</dependencies>
-```
-
-# 🔧 VM Options (JavaFX 25)
-
-Necessário para correr o JavaFX:
-```
---add-modules javafx.controls,javafx.fxml
---enable-native-access=javafx.graphics
-```
-
-# 👤 Autores
-
-👨‍💻 Pedro Fevereiro
-
-👨‍💻 Jadir Amador
-
-Desenvolvedor e estudante ISPGAYA
-Projeto académico e profissional de gestão de eventos.
+## Notas e Limitacoes
+- O README anterior referia PostgreSQL; a versao atual usa SQLite por defeito. Para PostgreSQL, adapte `db.java` e a string de conexao no `.env`.
+- O logging grava em `logs_app.txt` no diretorio raiz; evitar caminhos apenas de leitura.
+- UI e strings em PT; internacionalizacao pode ser adicionada (suggestion).
